# tibet-continuityd

./: README.md  pyproject.toml  pyproject_test.toml  tibet-continuityd.service
reference-deployment/: EVAL-KIT-HANDOFF.md  PLAN.md  QUICKSTART.md  README.md  _lib.sh  run-external-eval.sh
reference-deployment/dual-node-lab/: README.md  RUNBOOK.md  bridge-a-to-b.sh  compare-audit.sh  inject-demo.sh  prepare-lab.sh  run-lab-demo.sh  show-status.sh  start-lab.sh  stop-lab.sh
reference-deployment/portable-eval/: README.md  check-env.sh  expected-results.md  run-eval.sh  run-mini-pipeline.sh
reference-deployment/systemd-appliance/: README.md  RUNBOOK.md  continuityd.env.example  drop-demo-fixtures.sh  prepare-appliance.sh  show-audit-summary.sh  show-status.sh  tibet-continuityd.service
scripts/: audit_summary.py  stress.py  stress_coalesce.py
src/tibet_continuityd/: __init__.py  __main__.py  backpressure.py  cli.py  coalesce.py  credential_sniff.py  daemon.py  inbox_http.py  liveness.py  mux_consumer.py  police.py  seal.py  sniff.py  trust_kernel.py  verify_fork.py  watch.py
tests/: test_backpressure.py  test_cli_send.py  test_coalesce.py  test_daemon.py  test_police.py  test_seal.py  test_sniff.py  test_trust_kernel.py  test_verify_fork.py
