[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tibet-continuityd"
version = "0.6.4"
description = "Continuity daemon and sealed handoff tool — watch, sniff, verify, triage, reseal, police, and send continuity-bearing TBZ objects across local and cross-host lanes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jasper van de Meent", email = "info@humotica.com"},
    {name = "Root AI", email = "root_idd@humotica.nl"},
    {name = "Codex", email = "codex@humotica.nl"},
]
keywords = [
    "tibet", "continuity", "daemon", "audit", "trust",
    "inotify", "libmagic", "icc", "tbz", "ssm", "phantom",
    "distributed-continuity-os", "humotica",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]

# v0.3 has zero hard runtime dependencies; uses ctypes for inotify
# and an in-package magic-byte table. Optional dependencies enable
# cryptographic verify, pack, and reseal stages.
dependencies = []

[project.optional-dependencies]
# Verify + Fork + Seal stages with cryptographic discipline.
# tibet-drop covers TBZ pack/verify primitives.
verify = [
    "tibet-drop>=0.2.0",
]
# ICC bridge integration via tibet-phantom (Identity-Bound
# Continuity Container). Installs phantom + drop together.
phantom = [
    "tibet-phantom[icc]>=0.2.1",
]
# tibet-mux transport — single-port channel multiplexer.
# Enables `tcd send --transport mux` over tibet-mux server.
mux = [
    "tibet-mux>=1.0.1",
]
# Full stack: verify + phantom + extra crypto/cbor primitives.
full = [
    "tibet-drop>=0.2.0",
    "tibet-phantom[icc]>=0.2.1",
    "cryptography>=41.0",
    "cbor2>=5.4",
]

[project.scripts]
tibet-continuityd = "tibet_continuityd.cli:main"
tcd = "tibet_continuityd.cli:main"

[project.urls]
Homepage = "https://humotica.com"
Spec = "https://github.com/Humotica/tibet-continuityd/blob/main/SPEC.md"
